# gen_pass_rs

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  publish.yml
src/: lib.rs  main.rs
tests/: cli.rs  generator.rs
