[package]
name = "gen_pass"
version = "0.1.10"
edition = "2021"
authors = ["Eugen Soloviov <suenot@gmail.com>"]
description = "Secure password generation library and CLI"
license = "MIT"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
cargo-llvm-cov = { version = "0.6", default-features = false }
tempfile = "3"

[lib]
name = "gen_pass"
path = "src/lib.rs"

[[bin]]
name = "gen_pass"
path = "src/main.rs"
